// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS resolvers should evaluate a js resolver with snapshot 1`] = `
Object {
  "key": Object {
    "id": Object {
      "S": "123",
    },
  },
  "operation": "GetItem",
}
`;

exports[`Mapping Template should evaluate a template snapshot 1`] = `
Object {
  "key": Object {
    "pk": Object {
      "S": "456",
    },
  },
  "operation": "GetItem",
  "version": "2017-02-28",
}
`;
